--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_index"></string>
     <string name="banner_ad_unit_id">ca-app-pub-7848962688204458/9161263724</string>
+    <string name="interstitial_ad_unit_id">ca-app-pub-7848962688204458/4153382926</string>
     <string name="title_activity_item_description">ItemDescriptionActivity</string>
     <string name="title_activity_sub_group">SubGroupActivity</string>
     <string name="icon">Icon</string>
@@ -11,4 +12,5 @@
     <string name="title_activity_short_item_description">ShortItemDescriptionActivity</string>
     <string name="title_activity_slider_text">SliderTextActivity</string>
     <string name="title_activity_sliter_text_fragment">SliterTextFragment</string>
+    <string name="title_activity_daily_suvichar">DailySuvicharActivity</string>
 </resources>
